# rust_template

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  README.rst  RELEASES.md  RELEASES.rst  build.sh  cargo-generate.toml  dcargo  deny.toml  todo.rst
.cargo/: config
.github/workflows/: dependencies.yml  platforms.yml  polished.yml  publish.yml  works.yml
ci/: all.sh  build_debug.sh  build_dependencies.sh  build_docs.sh  build_release.sh  check_dependencies.sh  check_lint.sh  check_performance.sh  check_style.sh  check_tests.sh  dependencies.sh  general.sh  local.sh
config/: .gitignore  config.template.yaml  config.yaml
src/: dependencies.rs  lib.rs  main.rs
src/launch/: config.defaults.yaml  mod.rs  settings.rs
