cargo-features = ["profile-overrides"]

[package]
name = "my_new_project"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

build = "build/build.rs"
include = ["src/**/*", "Cargo.toml", "LICENSE.txt", "README.rst"]

publish = false
readme = "README.rst"
license = "BSD-3-Clause"
keywords = []

[badges]
#travis-ci = { repository = "https://github.com/mverleg/rust_template", branch = "master" }
#coveralls = { repository = "...", branch = "master", service = "github" }
#is-it-maintained-issue-resolution = { repository = "..." }
#is-it-maintained-open-issues = { repository = "..." }

[features]

[[bin]]
name = "my_new_project"
path = "src/main.rs"
required-features = []

[profile.dev]
opt-level = 0
lto = true

[profile.release]
opt-level = 3
lto = true

# always compile dependencies in optimized mode
[profile.dev.package."*"]
opt-level = 3

#TODO for web, use opt-level 'z'

[dependencies]
# Utilities
rand = "^0.7.2"
lazy_static = "^1.4.0"
regex = "^1.3.1"
chrono = { version = "^0.4.9", features = ["serde"] }
chrono-tz = { version = "^0.5.1", features = ["serde"] }
itertools = "^0.8.1"
generic-array = "^0.13.2"
array_tool = "^1.0.3"
config = "^0.9.3"
directories = "^2.0.2"
bincode = "^1.2.1"
serde = { version = "1.0.102", features = ["derive"] } # TODO version, tests
dotenv = "^0.15.0"
human-panic = "^1.0.1"

# Application
brotli = "^3.3.0"

[dev-dependencies]
mockstream = "^0.0.3"
lipsum = "^0.6.0"


[build-dependencies]
configure_me_codegen = "^0.3.12"
