# profile-overrides is kept for now (dec 2019) despite warnings, because there seems to be a difference between nightly and stable
cargo-features = ["profile-overrides", "named-profiles"]

[package]
name = "my_new_project"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

#TODO @mark: switch to metabuild: https://doc.rust-lang.org/cargo/reference/unstable.html#metabuild
build = "build/build.rs"
include = ["src/**/*", "Cargo.toml", "LICENSE.txt", "README.rst"]

publish = false
readme = "README.rst"
license = "BSD-3-Clause"
keywords = []

[badges]
#travis-ci = { repository = "https://github.com/mverleg/rust_template", branch = "master" }
#coveralls = { repository = "...", branch = "master", service = "github" }
#is-it-maintained-issue-resolution = { repository = "..." }
#is-it-maintained-open-issues = { repository = "..." }

[features]

[[bin]]
name = "my_new_project"
path = "src/main.rs"
required-features = []

[profile.dev]
opt-level = 0
#lto = true

# always compile dependencies in optimized mode
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
#TODO @mark: enable lto:
#codegen-units = 1  # slower but more extensive version of (thin)lto
#lto = true

[profile.test_coverage]
inherits = "dev"
incremental = false
debug = false

[profile.test_coverage.package."*"]
opt-level = 3

#TODO for web, use opt-level 'z'

[dependencies]
# Utilities
log = "^0.4.8"
pretty_env_logger = "^0.3.1"
mio = "^0.7.0-alpha.1"
rand = "^0.7.2"
rand_xorshift = "^0.2.0"  # non-cryptographic
lazy_static = "^1.4.0"
regex = "^1.3.1"
chrono = { version = "^0.4.9", features = ["serde"] }
chrono-tz = { version = "^0.5.1", features = ["serde"] }
itertools = "^0.8.1"
generic-array = "^0.13.2"
array_tool = "^1.0.3"
config = "^0.10.1"
directories = "^2.0.2"
bincode = "^1.2.1"
serde = { version = "1.0.102", features = ["derive"] } # TODO version, tests
dotenv = "^0.15.0"
#human-panic = "^1.0.1"
human-panic = { git = "https://github.com/rust-cli/human-panic" }  # TODO @mark: disable version above ^
smallvec = "^1.1.0"  # does most things 'arrayvec' does, I think
static_assertions = "^1.1.0"
data-encoding = "^2.1.2"

# Linaer algebra (needs openblas)
approx = "^0.3.2"
num = { version = "^0.2.0", features = ["rand", "serde"] }
ndarray = { version = "^0.13.0", features = ["serde", "blas"] }
ndarray-rand = "^0.11.0"
ndarray-linalg = { version = "^0.12.0", features = ["openblas"] }
# Next three: version must work with ndarray; only include this for binaries (not libraries)
blas = "*"
blas-src = { version = "*", features = ["openblas"] }
openblas-src = { version = "*", features = ["static"] }
#TODO @mark: num https://rust-lang-nursery.github.io/rust-cookbook/science/mathematics/complex_numbers.html

# Application
brotli = "^3.3.0"

[dev-dependencies]
mockstream = "^0.0.3"
lipsum = "^0.6.0"

[build-dependencies]
configure_me_codegen = "^0.3.12"
