[package]
name = "todo"
version = "0.1.0"
description = "todo"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "todo"
path = "src/main.rs"

[lib]
name = "todotodo"
path = "src/lib.rs"

[features]
jemalloc = ["jemallocator"]

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.25"
regex = "1.5.4"
lazy_static = "1.4.0"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.17"
derive-getters = "0.2.0"
derive-new = "0.5.9"
itertools = "0.10.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
